docs/apache-airflow-providers-tableau/2.1.3/_sources/_api/airflow/providers/tableau/operators/tableau_refresh_workbook/index.rst.txt
:py:mod:`airflow.providers.tableau.operators.tableau_refresh_workbook`
======================================================================

.. py:module:: airflow.providers.tableau.operators.tableau_refresh_workbook


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.tableau.operators.tableau_refresh_workbook.TableauRefreshWorkbookOperator




.. py:class:: TableauRefreshWorkbookOperator(*, workbook_name: str, site_id: Optional[str] = None, blocking: bool = True, tableau_conn_id: str = 'tableau_default', check_interval: float = 20, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   This operator is deprecated. Please use `airflow.providers.tableau.operators.tableau`.

   Refreshes a Tableau Workbook/Extract

   .. seealso:: https://tableau.github.io/server-client-python/docs/api-ref#workbooks

   :param workbook_name: The name of the workbook to refresh.
   :type workbook_name: str
   :param site_id: The id of the site where the workbook belongs to.
   :type site_id: Optional[str]
   :param blocking: Defines if the job waits until the refresh has finished.
       Default: True.
   :type blocking: bool
   :param tableau_conn_id: The :ref:`Tableau Connection id <howto/connection:tableau>`
       containing the credentials to authenticate to the Tableau Server. Default:
       'tableau_default'.
   :type tableau_conn_id: str
   :param check_interval: time in seconds that the job should wait in
       between each instance state checks until operation is completed
   :type check_interval: float

   .. py:method:: execute(self, context: airflow.utils.context.Context) -> str

      Executes the Tableau Extract Refresh and pushes the job id to xcom.

      :param context: The task context during execution.
      :type context: dict
      :return: the id of the job that executes the extract refresh
      :rtype: str



